It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Mon, Jul 13, 2009
---------------------------------------------------------------------
- Finished with user avatar upload, including controller and view specs.

Sun, Jul 12, 2009
---------------------------------------------------------------------
- Back home from Pismo Beach.

Thu, Jul 9, 2009
---------------------------------------------------------------------
- On my way to Pismo Beach, CA.

Tue, Jul 7, 2009
---------------------------------------------------------------------
- More tweaks for Profile > Upload Avatar form.

Mon, Jul 6, 2009
---------------------------------------------------------------------
- Replaced [mini_magick/has_image] combo with [paperclip] plugin.
- Installed [responds-to-parent-plugin].
- Added [Avatar] model.
- Implemented Ajax avatar uploads through hidden frame.

Sun, Jul 5, 2009
---------------------------------------------------------------------
- Installed [mini_magick] gem and [has_image] plugin.

Sat, Jul 4, 2009
---------------------------------------------------------------------
- Finished [Edit Profile] form which now updates all other page elements.
- Use root route instead of home (thanks, Dr.Nic!)

Fri, Jul 3, 2009
---------------------------------------------------------------------
- Added user controller and view specs.
- Converted [Edit Profile] form to Ajax, implemented update.

Wed, Jul 1, 2009
---------------------------------------------------------------------
- Added copyright notices (thanks, Michael!).
- Added routes and Ajax form stubs for [Edit Profile], [Upload Avatar], and [Change Password].

Tue, Jun 30, 2009
---------------------------------------------------------------------
- More work on user profile.
- Applied patches to fix an issue with comments and their formatting (thanks, Eric!).

Sun, Jun 28, 2009