@@ -230,6 +230,7 @@
     :width 500px
 
   .gravatar
+    :background #f2f2f2
     :float left
     :padding 0px 10px 5px 0px
 
@@ -301,7 +302,7 @@
 
     .gravatar
       :float left
-      :padding 0px 8px 5px 0px
+      :padding 0px 8px 0px 0px
 
     tt
       :color dimgray
