@@ -1,6 +1,5 @@
 .comment[comment]
-  = gravatar_for(comment.user, :size => "25x25", :default => "#{request.protocol + request.host_with_port}/images/avatar.jpg")
-  /= image_tag "avatar.jpg", :size => "25x25"
+  = link_to avatar_for(comment.user, :size => "25x25"), user_path(comment.user)
   .body
     = link_to comment.user.full_name, user_path(comment.user)
     %tt= time_ago(comment.created_at)
