@@ -1,18 +1,17 @@
 %li[activity]
-  %div
-    .tools
-      %small= activity.created_at.to_s(:mmddhhss).capitalize
-    %tt
-      = gravatar_for(activity.user, :size => "16x16", :default => "#{request.protocol + request.host_with_port}/images/avatar.jpg")
-      = link_to(activity.user.full_name, user_path(activity.user))
-      = activity.action + (activity.action != "commented" ? " " : " on ")
-      = activity.subject_type.downcase
-      - if activity.subject
-        - if activity.subject.respond_to?(:full_name)
-          = link_to(activity.subject.full_name, polymorphic_url(activity.subject))
-        - elsif activity.subject_type != "Task"
-          = link_to(activity.subject.name, polymorphic_url(activity.subject))
-        - else
-          %font{:color => :black}= activity.subject.name # Individual tasks have no landing pages where we could link to.
+  .tools
+    %small= activity.created_at.to_s(:mmddhhss).capitalize
+  %tt
+    = link_to avatar_for(activity.user, :size => "16x16"), user_path(activity.user)
+    = link_to(activity.user.full_name, user_path(activity.user))
+    = activity.action + (activity.action != "commented" ? " " : " on ")
+    = activity.subject_type.downcase
+    - if activity.subject
+      - if activity.subject.respond_to?(:full_name)
+        = link_to(activity.subject.full_name, polymorphic_url(activity.subject))
+      - elsif activity.subject_type != "Task"
+        = link_to(activity.subject.name, polymorphic_url(activity.subject))
       - else
-        = activity.info # Use info if the subject has been deleted.
+        %font{:color => :black}= activity.subject.name # Individual tasks have no landing pages where we could link to.
+    - else
+      = activity.info # Use info if the subject has been deleted.
