@@ -317,6 +317,7 @@ tt {
     padding: 3px;
     width: 500px; }
   .comment .gravatar {
+    background: #f2f2f2;
     float: left;
     padding: 0px 10px 5px 0px; }
   .comment .body {
@@ -377,7 +378,7 @@ tt {
     padding: 6px 0px 6px 0px; }
     .list li .gravatar {
       float: left;
-      padding: 0px 8px 5px 0px; }
+      padding: 0px 8px 0px 0px; }
     .list li tt {
       color: dimgray;
       font-size: 11px; }
